# oplang

./: .gitignore  CMakeLists.txt  Doxyfile  setup.ps1  setup.sh
assets/: test.txt
src/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Keyword.h  Token.h  TokenType.h  main.cpp
src/node/: Node.cpp  Node.h  NodeType.h
src/token/: Token.h  TokenType.h  Tokenizer.cpp  Tokenizer.h
src/util/: FileLoader.cpp  FileLoader.h  Logger.cpp  Logger.h
test/: CMakeLists.txt  SetupGTest.cmake  main.cpp
